--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -7,6 +7,9 @@
     <title>Page 1</title>
     <link rel="stylesheet" href="./css/small-back-link.css" />
     <link rel="stylesheet" href="./css/1-timer.css" />
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   </head>
   <body>
     <a class="back-link" href="./index.html">Go back</a>
