--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -5,23 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page 3</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/small-back-link.css" />
+    <link rel="stylesheet" href="./css/2-snackbar.css" />
   </head>
   <body>
-    <load
-      src="./partials/header.html"
-      icon-path="./img/sprite.svg#logo"
-      highlight-curr="active"
-    />
-
     <main>
       <div class="container">
-        <h1 class="main-title">
-          <span class="main-title-gradient">Welcome</span> to page 3
-        </h1>
-        <load src="./partials/back-link.html" />
+        <a class="back-link" href="./index.html">Go back</a>
+        <h1 class="main-title">Snackbar</h1>
       </div>
+      <form class="form">
+        <label class="lab-delay">
+          Delay (ms)
+          <input class="input-delay" type="number" name="delay" required />
+        </label>
+
+        <fieldset class="field-state">
+          <legend class="legend-state">State</legend>
+          <label class="label-radio-state">
+            <input
+              class="input-state"
+              type="radio"
+              name="state"
+              value="fulfilled"
+              required
+            />
+            Fulfilled
+          </label>
+          <label class="label-radio-state">
+            <input
+              class="input-state"
+              type="radio"
+              name="state"
+              value="rejected"
+              required
+            />
+            Rejected
+          </label>
+        </fieldset>
+
+        <button class="btn-snack" type="submit">Create notification</button>
+      </form>
     </main>
+
+    <script type="module" src="./js/2-snackbar.js"></script>
 
     <load src="./partials/footer.html" />
   </body>
